--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -10,6 +10,13 @@
 
     <h1> My Blog</h1>
 
+
+    {% if tag %}
+
+        <h2>Posts tagged with "{{ tag.name }}"</h2>
+
+    {% endif %}
+
     {% for post in posts %}
 
         <h2>
@@ -18,6 +25,22 @@
 
         </h2>
 
+        <p class="tags">
+
+
+                Tags:
+                {% for tag in post.tags.all %}
+
+                    <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                        {{ tag.name }}
+                    </a>
+
+                    {% if not forloop.last %}, {% endif %}
+
+                {% endfor %}
+
+
+        </p>
 
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
@@ -27,6 +50,6 @@
 
     {% endfor %}
 
- {% include "pagination.html" with page=page_obj %}    
+ {% include "pagination.html" with page=posts %}    
 
 {% endblock %}
