--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,5 +1,8 @@
 {% extends "blog/base.html" %}
 
+
+{% load blog_tags %}
+
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
@@ -9,7 +12,7 @@
         Published {{ post.publish }} by {{ post.author }}
     </p>
 
-    {{ post.body|linebreaks }}
+    {{ post.body|markdown }}
 
     <p>
 
