--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,6 +1,9 @@
 {% extends "blog/base.html" %}
 
 
+{% load blog_tags %}
+
+
 {% block title %} My Blog {% endblock %}
 
 
@@ -46,7 +49,7 @@
             Published {{ post.publish }} by {{ post.author }}
         </p>
 
-        {{ post.body|truncatewords:30|linebreaks }}
+        {{ post.body|markdown|truncatewords_html:30 }}
 
     {% endfor %}
 
